Prevent Potential Gap To the Right Of Actions

--- a/css/admin.less
+++ b/css/admin.less
@@ -492,9 +492,9 @@
 									font-size: 12px;
 									position: absolute;
 									top: 5px;
-									right: 7px;
+									right: 0;
 									cursor: pointer;
-									padding: 2px 2px 2px 15px;
+									padding: 2px 8px 2px 15px;
 									z-index: 10;
 
 									&:hover a {
